--- a/AdvancedOpenGL/CMakeLists.txt
+++ b/AdvancedOpenGL/CMakeLists.txt
@@ -19,7 +19,7 @@ find_package(OpenGL REQUIRED COMPONENTS OpenGL)
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
-find_package(GLEW REQUIRED)
+find_package(GLEW REQUIRED NO_DEFAULT_PATH)
 include_directories(${GLEW_INCLUDE_DIRS})
 
 find_package(OpenGL)
