--- a/AdvancedOpenGL/.vscode/settings.json
+++ b/AdvancedOpenGL/.vscode/settings.json
@@ -50,5 +50,6 @@
         "array": "cpp",
         "bit": "cpp",
         "clocale": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
